DesignProject/tests/error/error06_missing_return_type.src
// Error test: Missing return type in function declaration
// Expected: Syntax error - missing return type after =>

func test() => {
  local x : integer;
  return (x);
}

